--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
+    "@tanstack/react-query": "^5.90.21",
     "ably": "^2.17.1",
+    "axios": "^1.13.5",
     "mqtt": "^5.15.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
